--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     username: postgres
-    url: jdbc:postgresql://localhost:5432/web_user_data
+    url: jdbc:postgresql://localhost:5432/imtihon
     password: yusufbek205
   jpa:
     hibernate:
